RESOLVED FIXED62694
(AVFoundation) Apple event video appears as live stream and is not seekable
https://bugs.webkit.org/show_bug.cgi?id=62694
Summary (AVFoundation) Apple event video appears as live stream and is not seekable
Jer Noble
Reported 2011-06-14 22:34:29 PDT
(AVFoundation) Apple event video appears as live stream and is not seekable
Attachments
Patch (2.25 KB, patch)
2011-06-14 22:46 PDT, Jer Noble
eric.carlson: review+
Jer Noble
Comment 1 2011-06-14 22:46:45 PDT
Jer Noble
Comment 2 2011-06-15 09:26:54 PDT
Note You need to log in before you can comment on or make changes to this bug.